# Verity

./: .gitignore  README.md  SETUP.md  proactive_mode_architecture.md
.claude/commands/: supercode.md
.github/workflows/: ci.yml
apps/web/: .env.example  next.config.ts  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/(marketing)/: layout.tsx  page.tsx
apps/web/app/app/: layout.tsx
apps/web/app/compute/: page.tsx
apps/web/app/flows/: page.tsx
apps/web/app/t/: page.tsx
apps/web/components/auth/: AccountRow.tsx  AuthGate.tsx  AuthScreen.tsx
apps/web/components/background/: AmbientMesh.tsx  ShaderGround.tsx  ambientRenderer.ts
apps/web/components/chat/: Attachments.tsx  BranchMenu.tsx  ChatView.tsx  Composer.tsx  ConfidenceChip.tsx  EmptyState.tsx  MessageBubble.tsx  MessageList.tsx  ModelPicker.tsx
apps/web/components/compute/: ComputeView.tsx  ConsensusDiagram.tsx
apps/web/components/flows/: FlowComposer.tsx  FlowStage.tsx  FlowTopology.tsx  FlowsView.tsx
apps/web/components/glass/: Button.tsx  Chip.tsx  Field.tsx  Menu.tsx  Modal.tsx  Panel.tsx  Skeleton.tsx  index.ts
apps/web/components/marketing/: marketing.css
apps/web/components/media/: Img.tsx
apps/web/components/offices/: status.ts  (+3 more)
apps/web/lib/: auth.tsx  handoff.ts  markdown.ts  optimistic.ts  store.tsx  stream-buffer.ts
apps/web/public/: manifest.webmanifest  sw.js
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
backend/src/config/: database.ts  env.ts
backend/src/db/: schema.ts
backend/src/middleware/: auth.ts  errorHandler.ts
backend/src/routes/: auth.ts  connectors.ts  health.ts  mcp.ts  skills.ts  tasks.ts
backend/src/services/: auth.ts
backend/src/types/: index.ts
backend/src/utils/: encryption.ts  logger.ts
docs/: API_SURFACE.md  COMPETITOR_GAPS.md  DEPLOY.md  MASTER_PLAN.md  SCALE_BACKLOG.md  STATUS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/pages/: Connectors.tsx  Dashboard.tsx  Login.tsx  MCP.tsx  Settings.tsx  Skills.tsx  Tasks.tsx
frontend/src/store/: authStore.ts  uiStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
infra/ci/: consensus_e2e.sh  cross_tenant_http.sh  cross_tenant_test.sh  docker_lint.sh  persistence_e2e.sh
infra/cloudflare/: README.md  _headers.template  pages.tf  rate_limits.tf  terraform.tfvars.example  variables.tf  versions.tf  waf.tf
infra/docker/: .env.prod.example  compose.prod.yaml  compose.yaml
infra/migrations/: 0001_schema_v1.sql  0002_compute_network.sql  0003_platform_wiring.sql  0004_office_scheduler.sql  0005_entitlements.sql  README.md
infra/tls/: .gitignore  README.md  WIRING.md  gen-certs.sh
model/: README.md
model/corpus/behavioral/: 01_identity_product.jsonl  02_confidence_rrr.jsonl  03_bop.jsonl  04_wrap_untrusted.jsonl  05_tools_mcp_skills.jsonl  06_memory_brains.jsonl  07_refusal_safety.jsonl  08_boundaries.jsonl  09_files_citations.jsonl  10_formatting_length.jsonl  11_error_degrade.jsonl
model/corpus/structured_tasks/: confidence_rrr_trace.jsonl  flow_decomposition.jsonl  memory_extraction_decision.jsonl  office_state_cycle.jsonl  prompt_optimizer_rewrite.jsonl  wrap_injection_resistance.jsonl
model/corpus/system_prompts/: flow_conductor.md  flow_inspector.md  flow_worker.md  office_autonomy.md  verity_9b_core.md
model/dataset/: .gitignore
model/scripts/: build_dataset.py  validate.py
services/brain/: .dockerignore  Dockerfile  pyproject.toml
services/brain/app/: bop.py  confidence.py  config.py  db.py  grpc_server.py  injection.py  main.py  mcp_client.py  platform_server.py  refiner.py  tenant.py  vault.py  worker.py  wrap.py
services/brain/app/entitlements/: __init__.py  service.py
services/brain/app/flows/: engine.py  research.py
services/brain/app/kb/: __init__.py  service.py
services/brain/app/memory/: cognee_store.py  obsidian.py  service.py
services/brain/app/offices/: runner.py
services/brain/app/pb/: __init__.py
services/brain/app/pb/verity/v1/: brain_pb2.py  brain_pb2_grpc.py  common_pb2.py  common_pb2_grpc.py  compute_pb2.py  compute_pb2_grpc.py  core_pb2.py  core_pb2_grpc.py  platform_pb2.py  platform_pb2_grpc.py
services/brain/app/providers/: anthropic.py  base.py  echo.py  openai_compat.py  registry.py
services/brain/app/queue/: __init__.py  base.py  handlers.py  inprocess.py  redis_queue.py
services/brain/app/repos/: __init__.py  branches.py  conversations.py  entitlements.py  files.py  mcp.py  messages.py  offices.py  provider_keys.py
services/brain/app/scheduler/: __init__.py  core.py  cron.py
services/brain/app/skills/: executor.py  loader.py
services/brain/app/tools/: __init__.py  base.py  build.py  files.py  filestore.py  kb_tools.py  mcp_tools.py  registry.py  skill_tools.py  web.py
services/brain/tests/: test_cognee_memory.py  test_file_tools.py  test_injection.py  test_kb.py  test_obsidian.py  test_pipeline.py  test_platform.py  test_queue.py  test_research.py  test_scheduler.py  test_security_hardening.py  test_tenant.py  test_tools.py  test_vault.py  test_web_tools.py
services/core/: .dockerignore  Cargo.toml  Dockerfile  build.rs
services/core/src/: consensus.rs  coordinator.rs  main.rs  qdrant.rs
services/fetch/: .dockerignore  Dockerfile  pyproject.toml
services/fetch/app/: __init__.py  browser.py  config.py  extract.py  main.py  ssrf.py
services/fetch/tests/: test_caps.py  test_extract.py  test_ssrf.py
services/gateway/: .dockerignore  Dockerfile  auth.go  auth_m2_test.go  auth_supabase.go  auth_supabase_test.go  auth_test.go  cache.go  chat.go  compute.go  entitlements.go  flows.go  go.mod  go.sum  headers.go  main.go  observe.go  platform.go  ratelimit.go  ratelimit_order_test.go  ratelimit_test.go  spine.go  validate.go  validate_test.go  ws.go
services/node/: .dockerignore  Cargo.toml  Dockerfile  build.rs
services/node/src/: executor.rs  main.rs
(+43 files in other folders)
