[project]
name = "verity-brain"
version = "0.1.0"
description = "Verity brain — orchestration, flows, offices, memory (cognee), providers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "uvicorn>=0.30",
    "grpcio>=1.60",
    "protobuf>=4.25",
    "cryptography>=43",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]
# cognee = PRIMARY memory engine, kept OPTIONAL so the brain has no new REQUIRED
# dependency and boots (and tests) without it. Install to enable the in-process
# knowledge-graph path: `pip install verity-brain[cognee]` + VERITY_COGNEE=1.
# Pulls heavy transitive deps (embeddings/LLM clients) — never in the default
# test env. The add→cognify→search API used lives in cognee 1.x.
cognee = ["cognee>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
