[project]
name = "verity-brain"
version = "0.1.0"
description = "Verity brain — orchestration, flows, offices, memory (cognee), providers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "uvicorn>=0.30",
    "grpcio>=1.60",
    "protobuf>=4.25",
    "cryptography>=43",
    "httpx>=0.27",
]

[project.optional-dependencies]
# fakeredis + croniter let the test suite exercise the Redis queue path and the
# real cron next-fire computation without a live Redis / without shipping either
# as a runtime requirement.
dev = ["pytest>=8", "pytest-asyncio>=0.24", "croniter>=2", "fakeredis>=2"]
# G3 office scheduler cron engine. OPTIONAL + lazily imported: absent → the
# scheduler runs but computes no fire times (offices never fire), logged once,
# reported by /healthz. Boot never dies. `pip install verity-brain[scheduler]`.
scheduler = ["croniter>=2"]
# G12 durable run queue + G3 cross-replica tick lease. OPTIONAL: with no
# REDIS_URL (or this absent) the queue is the in-process asyncio one and the
# scheduler uses a single-process tick guard. `pip install verity-brain[redis]`.
redis = ["redis>=4.3"]
# cognee = PRIMARY memory engine, kept OPTIONAL so the brain has no new REQUIRED
# dependency and boots (and tests) without it. Install to enable the in-process
# knowledge-graph path: `pip install verity-brain[cognee]` + VERITY_COGNEE=1.
# Pulls heavy transitive deps (embeddings/LLM clients) — never in the default
# test env. The add→cognify→search API used lives in cognee 1.x.
cognee = ["cognee>=1.0"]
# G9 file-output deliverables. OPTIONAL: each generator lib is lazily imported
# inside its tool; absent → the tool degrades with a clear "<lib> not installed"
# result. No new REQUIRED dependency; install to enable real docx/pptx/xlsx/pdf
# generation. `pip install verity-brain[files]`.
files = [
    "python-docx>=1.1",   # create_docx
    "python-pptx>=1.0",   # create_pptx
    "openpyxl>=3.1",      # create_xlsx
    "reportlab>=4.0",     # create_pdf
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
