[package]
name = "verity-core"
version = "0.1.0"
edition = "2021"
description = "Verity core — Qdrant vector search proxy, embedding pipelines, consensus verification"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
