[project]
name = "verity-fetch"
version = "0.1.0"
description = "Verity fetch — headless-browser render-to-markdown, SSRF-guarded (backlog G11)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    # Chromium build is pinned to this Playwright release (revision 1194). The
    # runtime image ships the matching browser; never `playwright install` ad hoc.
    "playwright==1.56.0",
    # readability-style main-content extraction → clean markdown.
    "readability-lxml>=0.8.1",
    "markdownify>=0.13",
    "beautifulsoup4>=4.12",
    "lxml>=5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
